bmp2txt ver. 0.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "txt2bmp"
-version = "0.1.0"
-edition = "2021"
-description = "Convert texts to a BMP image"
-
-[dependencies]
-clap = { version = "4.5.16", features = ["derive"] }
+[workspace]
+resolver = "2"
+members = ["txt2bmp", "bmp2txt"]
